--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -49,7 +49,7 @@ bgmstop="Yes"
 # Find more options at bottom of file.
 ttyenable="No"
 
-# How to handle duplicate roms. Can be "normal" or "strict". Strict will only keep one version of a game so no betas or hacks for this game in SAM.
+# No hacks, prototypes etc. when using strict. Can be "normal" or "strict". normal shows all hacks.
 dupe_mode="normal"
 
 # ---------- SPECIAL MODES --------------
