--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -73,7 +73,8 @@ m82_muted="no"
 # Good to use if you have young children. Limits rom selection to ESRB rated games with the "All Ages" label
 # Please update SAM after enabling this to download the ESRB game whitelists
 # Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
-kids_safe="no"
+# Can be kids or mature
+rating="no"
 
 # Alternative way of selecting cores. Based on how many games a system has.
 coreweight="No"
@@ -208,6 +209,9 @@ ttybig="no"
 ttyname_cleanup="no"
 # How fast the scrolling speed should be. Options are slower, normal or faster
 ttyscroll_speed="normal"
+
+# DEPRECATED
+kids_safe="no"
 
 # DEBUG 
 samdebug="No"
