--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -34,7 +34,7 @@ corelist="amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c
 # When SAM starts, mute volume. Playing a game will turn on volume.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Yes or No 
-# NOTE - MUTE gets overridden if BGM is active.
+# NOTE - MUTE gets overridden if BGM is active. This setting writes to SD on every exit and startup of SAM
 mute="Yes"
 
 # SAM supports Background Music Player
@@ -158,6 +158,10 @@ samvideo_tvc="no"
 sv_aspectfix_vmode="yes"
 # SAM modifies MiSTer.ini to set up correct video_modes for video playback. You can disable INI modification by setting sv_inimod to no
 sv_inimod="yes"
+# SET TO yes TO ENABLE BACKUP/RESTORE, no TO DISABLE 
+# NOTE - This setting writes to SD on every exit when set to yes
+sv_inibackup="no" 
+
 # For CRT playback on archive playback we use 640x240
 samvideo_crtmode640="video_mode=640,16,64,80,240,1,3,14,12380"
 # For CRT playback on youtube playback we use 320x240
