--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -158,7 +158,7 @@ samvideo_tvc="no"
 sv_aspectfix_vmode="yes"
 # SAM modifies MiSTer.ini to set up correct video_modes for video playback. You can disable INI modification by setting sv_inimod to no
 sv_inimod="yes"
-# SET TO yes TO ENABLE BACKUP/RESTORE, no TO DISABLE 
+# If we mod MiSTer.ini, do we want to return to the backed up ini when SAM quits?
 # NOTE - This setting writes to SD on every exit when set to yes
 sv_inibackup="no" 
 # For CRT playback on archive playback we use 640x240
