--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -209,6 +209,8 @@ disablebootrom="Yes"
 unmute_on_boot="Yes"
 
 # List Building Control
+# Rescan gamelists for new games once per core
+check_for_new_games="Yes"
 # Check for new zip files on disk when building lists; may cause extra disk access
 checkzipsondisk="No"
 # Force a one-time scan for new zips on next run
