--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -210,7 +210,7 @@ unmute_on_boot="Yes"
 
 # List Building Control
 # Rescan gamelists for new games once per core
-check_for_new_games="Yes"
+check_for_new_games="No"
 # Check for new zip files on disk when building lists; may cause extra disk access
 checkzipsondisk="No"
 # Force a one-time scan for new zips on next run
