--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -28,8 +28,8 @@ menuonly="Yes"
 playcurrentgame="Yes" 
 
 # Which systems would you like to display in Attract Mode?
-# Valid options: amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,cdi,coco2,fds,gb,gbc,gba,genesis,gg,jaguar,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,stv,tgfx16,tgfx16cd,vectrex,wonderswan,wonderswancolor,psx,x68k,mgls
-corelist="amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,cdi,coco2,fds,gb,gbc,gba,genesis,gg,jaguar,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,stv,tgfx16,tgfx16cd,vectrex,wonderswan,wonderswancolor,psx,x68k,mgls"
+# Valid options: amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,cdi,coco2,colecovision,fds,gb,gbc,gba,genesis,gg,jaguar,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,stv,tgfx16,tgfx16cd,vectrex,wonderswan,wonderswancolor,psx,x68k,mgls
+corelist="amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,cdi,coco2,colecovision,fds,gb,gbc,gba,genesis,gg,jaguar,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,stv,tgfx16,tgfx16cd,vectrex,wonderswan,wonderswancolor,psx,x68k,mgls"
 
 # When SAM starts, mute volume. Playing a game will turn on volume.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
@@ -120,6 +120,7 @@ atarilynxpathfilter=""
 c64pathfilter=""
 cdipathfilter=""
 coco2pathfilter=""
+colecovisionpathfilter=""
 fdspathfilter=""
 gbpathfilter=""
 gbcpathfilter=""
