--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -25,7 +25,7 @@ menuonly="Yes"
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed. 
 # NOTE - If you push Start on your controller it will play the current game, any other button quits SAM. Set this up in SAM's menu under "Configure Exit behavior"
 # "Yes" - SAM will stay in the current game when exiting.
-playcurrentgame="Yes" 
+playcurrentgame="No" 
 
 # Which systems would you like to display in Attract Mode?
 # Valid options: amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,cdi,coco2,colecovision,intellivision,fds,gb,gbc,gba,genesis,gg,jaguar,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,stv,tgfx16,tgfx16cd,vectrex,wonderswan,wonderswancolor,psx,x68k,mgls
