--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -23,8 +23,10 @@ menuonly="Yes"
 
 # How do we exit SAM?
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed. 
-# NOTE - If you push Start on your controller it will play the current game, any other button quits SAM. Set this up in SAM's menu under "Configure Exit behavior"
 # "Yes" - SAM will stay in the current game when exiting.
+
+# NOTE - If you push Start on your controller it will play the current game, any other button quits SAM. 
+# Set up Start button if yours isn't working in SAM's menu under "Configure Exit behavior"
 playcurrentgame="No" 
 
 # Which systems would you like to display in Attract Mode?
