--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -19,7 +19,7 @@ gametimer=180
 
 # Start SAM only from MiSTer main menu
 # If menuonly is set to "No", SAM will start from an active core after you put down the controller. 
-menuonly="Yes"
+menuonly="yes"
 
 # How do we exit SAM?
 # "No" - SAM will reboot to MiSTer Menu when a button is pushed. 
@@ -27,17 +27,17 @@ menuonly="Yes"
 
 # NOTE - If you push Start on your controller it will play the current game, any other button quits SAM. 
 # Set up Start button if yours isn't working in SAM's menu under "Configure Exit behavior"
-playcurrentgame="No" 
+playcurrentgame="no"
 
 # Which systems would you like to display in Attract Mode?
 # Valid options: amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,cdi,coco2,colecovision,intellivision,fds,gb,gbc,gba,genesis,gg,jaguar,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,stv,tgfx16,tgfx16cd,vectrex,wonderswan,wonderswancolor,psx,x68k,mgls
-corelist="amiga,amigacd32,ao486,arcade,atari2600,atari5200,atari7800,atarilynx,c64,cdi,coco2,colecovision,intellivision,fds,gb,gbc,gba,genesis,gg,jaguar,megacd,n64,neogeo,neogeocd,nes,s32x,saturn,sgb,sms,snes,stv,tgfx16,tgfx16cd,vectrex,wonderswan,wonderswancolor,psx,x68k,mgls"
+corelist="arcade,atarilynx,gb,gbc,genesis,gg,megacd,n64,nes,psx,saturn,s32x,sgb,sms,snes,tgfx16,tgfx16cd"
 
 # When SAM starts, mute volume. Playing a game will turn on volume.
 # A reboot or stopping SAM will clear all volume settings and restore any volume settings you have set prior
 # Options are Yes or No 
 # NOTE - MUTE gets overridden if BGM is active. This setting writes to SD on every exit and startup of SAM
-mute="No"
+mute="Yes"
 
 # SAM supports Background Music Player
 # Drop pls or mp3s in /media/fat/music. More info at https://github.com/wizzomafizzo/MiSTer_BGM
@@ -49,7 +49,7 @@ bgmstop="Yes"
 # A Hardware Add-On display for MiSTer
 # "Yes" shows the text name of the game being played. 
 # Find more options at bottom of file.
-ttyenable="No"
+ttyenable="Yes"
 
 # No hacks, prototypes etc. when using strict. Can be "normal" or "strict". normal shows all hacks.
 dupe_mode="normal"
@@ -57,7 +57,7 @@ dupe_mode="normal"
 # ---------- SPECIAL MODES --------------
 # This is a curated list of games for different cores with great Attract Modes.
 # Feel free to edit it to your liking at /media/fat/Scripts/.MiSTer_SAM/SAM_Gamelists/sam_goat_list.txt
-sam_goat_list="no"
+sam_goat_list="No"
 
 # SAM game roulette is a mode available in the menu, where you only have a certain amount of time to play a game, before SAM shuffles to the next game.
 # SAM will ignore any button inputs and shuffle to a new game after the set timer expires.
@@ -76,10 +76,10 @@ m82_muted="no"
 # Please update SAM after enabling this to download the ESRB game whitelists
 # Some cores like MegaCD will only have very few games so it's best to use coreweight which you can find further down in this ini
 # Can be kids or mature
-rating="no"
+rating="No"
 
 # Alternative way of selecting cores. Based on how many games a system has.
-coreweight="No"
+coreweight="no"
 
 # When pushing "next game" button on controller, do we want to ignore the current game from now on?
 # Only works if controller has been configured in menu (or try default button "select")
@@ -102,7 +102,7 @@ mgls_dirs=""
 
 # --------- ARCADE ORIENTATION ---------
 # Set Arcade orientation to "horizontal" "vertical" or leave empty
-arcadeorient=""
+arcadeorient="horizontal"
 
 # --------- PATH FILTER ---------
 # If you would like to only play games from a subdirectory of your games folder, put it here
@@ -114,7 +114,7 @@ arcadeorient=""
 amigapathfilter=""
 amigacd32pathfilter=""
 ao486pathfilter=""
-arcadepathfilter=""
+arcadepathfilter="_Arcade/_Organized/_3 Collections/_1 By Platform/_Capcom CPS"
 atari2600pathfilter=""
 atari5200pathfilter=""
 atari7800pathfilter=""
@@ -155,13 +155,16 @@ mglspathfilter=""
 # Folders and files you would like to exlude, like NSF (Audio files for NES) for example. You don't need to include the full path or file name.
 # Partial names with case insensitive spelling will suffice.
 
-exclude=( readme unsupported bios )
+exclude=( readme unsupported bios CPS-0 )
 
 
 # -------- SAMVIDEO SETTINGS -------
+# New method to play commercials through CDI core. Set to yes, all other values in this section will be ignored.
+samvideo_tvc_cdi="Yes"
+
 # Play videos in SAM (eg old video game commercials)
 # ATTENTION: In order for SAMVIDEO to work, we will modify MiSTer.ini (adding a video_mode for menu core). Please check MiSTer.ini if you experience any issues.
-samvideo="No"
+samvideo="Yes"
 # Choose the video output, either HDMI or CRT. Note that only archive playback is supported for "samvideo_source" if using CRT mode.
 samvideo_output="HDMI"
 # Change the following setting if you can only hear the audio of the video and SAM shows the Menu core. Some displays need more time.
@@ -174,14 +177,15 @@ download_manager="yes"
 # Recommended video codec is XVID in 640x480 for HDMI or 640x240 for CRT
 samvideo_path="/media/fat/video"
 # This option will download all commercials to samvideo_path
-keep_local_copy="no"
+keep_local_copy="Yes"
 # Alternate with every core played, play video like another core or only play videos - Options are alternate, core or only
 samvideo_freq="alternate"
 #Play videos from youtube, archive or local. Lists are auto generated. Just setting youtube or archive is enough to have videos play from there.
 #If you're having issues with Youtube, try deleting /media/fat/Scripts/.MiSTer_SAM/ytdl file
-samvideo_source="archive"
+samvideo_source="Archive"
 # Play a TV commercial of eg SNES and than show the corresponding SNES game. Only works for archive.org list.
-samvideo_tvc="no"
+samvideo_tvc="Yes"
+
 # For HDMI playback if your device shows black bars, try setting sv_aspectfix_vmode to yes. 
 sv_aspectfix_vmode="yes"
 # SAM modifies MiSTer.ini to set up correct video_modes for video playback. You can disable INI modification by setting sv_inimod to no
@@ -255,10 +259,10 @@ ttyscroll_speed="normal"
 kids_safe="no"
 
 # DEBUG 
-samdebug="No"
+samdebug="Yes"
 # Write debug message to file at /tmp/samdebug.log
-samdebuglog="No"
+samdebuglog="Yes"
 
 # GitHub branch to download updates from
 # Valid choices are: "main" or "test"
-branch="main"
+branch="test"
