--- a/MiSTer_SAM.ini
+++ b/MiSTer_SAM.ini
@@ -159,7 +159,7 @@ exclude=( readme unsupported bios CPS-0 )
 
 
 # -------- SAMVIDEO SETTINGS -------
-# New method to play commercials through CDI core. Set to yes, all other values in this section will be ignored.
+# New method to play commercials through CDI core.
 samvideo_tvc_cdi="Yes"
 
 # Play videos in SAM (eg old video game commercials)
